second ETHAN TAAKE IT

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<title>Merl</title>
+
+		<link rel="shortcut icon" type="image/png" href="images/merl_favi.png">
+		<link rel="shortcut icon" type="image/png" href="images/merl_favi.png"/>
+
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	    <meta name="A design studio based in Providence, Rhode Island." content="Demo project">
@@ -14,10 +18,31 @@
 			<img src="images/merl_logo.svg">
 		</div>
 
-		<div class="smallText left">Contact</div>
-		<div class="smallText right">
-			<p>Providence, RI</p>
+		<div class="nav">
+			<!-- <ul style="none">
+				<li>1</li>
+				<li>2</li>
+				<li>3</li>
+			</ul> -->
+
+			<ul style="none">
+				<li>About</li>
+				<li>Contact</li>
+			</ul>
 		</div>
+
+		<div class="intro">
+			<p>We’re Merl. We are five friends and we work together on things that interest us. We do everything from publication design to front-end development. This website is currently in progress meanwhile check us out on <a href="https://www.instagram.com/merl.studio/">Instagram</a>.</p>
+		</div>
+
+		<div class="about">
+			<a href="http://josephallegro.com/">Joseph Allegro</a> is a bean with a hammer.<br>
+			<a href="http://ethanhasaportfolio.com/">Ethan Anderson</a> is a computer with a heart drive.<br>
+			<a href="http://www.mbweb.site/">Meredith Barone</a> is a snowball made of hot lead.<br>
+			<a href="http://www.mostyngriffith.com/">Mostyn Griffith</a> is a strong plum.<br>
+			<a href="http://gskagerlind.com/">Greta Sk</a> is the real one, but they suffer from jaundice!
+		</div>
+
 
 		<script type="text/javascript"></script>
 	</body>
