--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
 				<li>3</li>
 			</ul> -->
 
-			<ul style="none">
+<!-- 			<ul style="none">
 				<li>About</li>
 				<li>Contact</li>
-			</ul>
+			</ul> -->
 		</div>
 
 		<div class="intro">
-			<p>We’re Merl. We are five friends and we work together on things that interest us. We do everything from publication design to front-end development. This website is currently in progress meanwhile check us out on <a href="https://www.instagram.com/merl.studio/">Instagram</a>.</p>
+			<p>We’re Merl. We are five friends that work together on things that interest us. We do everything from publication design to front-end development. This website is currently in progress meanwhile check us out on <a href="https://www.instagram.com/merl.studio/">Instagram</a>.</p>
 		</div>
 
-		<div class="about">
+<!-- 		<div class="about">
 			<a href="http://josephallegro.com/">Joseph Allegro</a> is a bean with a hammer.<br>
 			<a href="http://ethanhasaportfolio.com/">Ethan Anderson</a> is a computer with a heart drive.<br>
 			<a href="http://www.mbweb.site/">Meredith Barone</a> is a snowball made of hot lead.<br>
 			<a href="http://www.mostyngriffith.com/">Mostyn Griffith</a> is a strong plum.<br>
 			<a href="http://gskagerlind.com/">Greta Sk</a> is the real one, but they suffer from jaundice!
 		</div>
-
+ -->
 
 		<script type="text/javascript"></script>
 	</body>
