--- a/index.html
+++ b/index.html
@@ -17,19 +17,14 @@
 		<div class="logo">
 			<img src="images/merl_logo.svg">
 		</div>
-
+<!-- 
 		<div class="nav">
-			<!-- <ul style="none">
-				<li>1</li>
-				<li>2</li>
-				<li>3</li>
-			</ul> -->
 
-<!-- 			<ul style="none">
+			<ul style="none">
 				<li>About</li>
 				<li>Contact</li>
-			</ul> -->
-		</div>
+			</ul>
+		</div> -->
 
 		<div class="intro">
 			<p>We’re Merl. We are five friends that work together on things that interest us. We do everything from publication design to front-end development. This website is currently in progress meanwhile check us out on <a href="https://www.instagram.com/merl.studio/">Instagram</a>.</p>
