save the village

--- a/index.html
+++ b/index.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Merl</title>
+<head>
+	<title>Merl Studio</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="description" content="Merl Studios is a full service creative studio">
+	<meta name="keywords" content="graphic design, graphic design studio, design freelance, design, creative studio, freelance">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+</head>
+<body>
 
-		<link rel="shortcut icon" type="image/png" href="images/merl_favi.png">
-		<link rel="shortcut icon" type="image/png" href="images/merl_favi.png"/>
-
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	    <meta name="A design studio based in Providence, Rhode Island." content="Demo project">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-		<style type="text/css"></style>
-	</head>
-	<body>
-		<div class="logo">
-			<img src="images/merl_logo.svg">
+	<section class="landing-page">
+		<img class="merl-hero" src="images/merl_logo.svg" alt="Merl">
+		<div class="welcome-text">
+			<p>
+			We’re Merl Longchamp. We are friends and we work together on interesting projects. Please hire us to do work that involves the notion of space from memory and as a practice. We make the notion practice from memory into space.
+			</p>
+		</div> 
+		<div class="numbers">
+			<p class="number active" id="number-1">1</p>
+			<p class="number" id="number-2">2</p>
+			<p class="number" id="number-3">3</p>
 		</div>
-<!-- 
-		<div class="nav">
+	</section>
 
-			<ul style="none">
-				<li>About</li>
-				<li>Contact</li>
-			</ul>
-		</div> -->
+	<section class="work">
+		
+	</section>
 
-		<div class="intro">
-			<p>We’re Merl. We are five friends that work together on things that interest us. We do everything from publication design to front-end development. This website is currently in progress meanwhile check us out on <a href="https://www.instagram.com/merl.studio/">Instagram</a>.</p>
-		</div>
-
-<!-- 		<div class="about">
-			<a href="http://josephallegro.com/">Joseph Allegro</a> is a bean with a hammer.<br>
-			<a href="http://ethanhasaportfolio.com/">Ethan Anderson</a> is a computer with a heart drive.<br>
-			<a href="http://www.mbweb.site/">Meredith Barone</a> is a snowball made of hot lead.<br>
-			<a href="http://www.mostyngriffith.com/">Mostyn Griffith</a> is a strong plum.<br>
-			<a href="http://gskagerlind.com/">Greta Sk</a> is the real one, but they suffer from jaundice!
-		</div>
- -->
-
-		<script type="text/javascript"></script>
-	</body>
+</body>
 </html>
