--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<img class="merl-hero" src="images/merl_logo.svg" alt="Merl">
 		<div class="welcome-text">
 			<p>
-			We’re Merl Longchamp. We are friends and we work together on interesting projects. Please hire us to do work that involves the notion of space from memory and as a practice. We make the notion practice from memory into space.
+			We’re Merl Longchamp. We are friends and we work together on projects that interest us. We are currently open to making websites, crafting your brand identity, designing your book or editorial, and even helping you with your installation art piece! Let us know what we can do for you. 
 			</p>
 		</div> 
 		<div class="numbers">
