--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<img class="merl-hero" src="images/merl_logo.svg" alt="Merl">
 		<div class="welcome-text">
 			<p>
-			We’re Merl Longchamp. We are friends and we work together on projects that interest us. We are currently open to making websites, crafting your brand identity, designing your book or editorial, and even helping you with your installation art piece! Let us know what we can do for you. 
+			We’re Merl Longchamp. We are friends and we work together on projects that interest us. We are currently open to making websites, crafting your brand identity, designing your book or editorial, and even helping you with your installation art piece! Let us know what we can do for you. This website is currently in development, but in the meantime you can check us out on <a href="https://www.instagram.com/merl.studio/">Instagram.</a>
 			</p>
 		</div> 
 		<div class="numbers">
