--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Merl Studio</title>
+	
+	<meta name="google-site-verification" content="OVAgw1-rGtoHi8Z9wUimhsJw9AhZTwhbwPagknLuaP8" />
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="description" content="Merl Studios is a full service creative studio">
