--- a/index.html
+++ b/index.html
@@ -2,36 +2,67 @@
 <html>
 <head>
 	<title>Merl Studio</title>
-	
-	<meta name="google-site-verification" content="OVAgw1-rGtoHi8Z9wUimhsJw9AhZTwhbwPagknLuaP8" />
-	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="description" content="Merl Studios is a full service creative studio">
-	<meta name="keywords" content="graphic design, graphic design studio, design freelance, design, creative studio, freelance">
+	<meta name="description" content="Demo project with jQuery">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/style.css">
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+	<!-- project landing page block block -->
+	<!-- collapses on scroll or click -->
+	<section class="project_landing_container">
+		<div class="project_landing">
+			<nav>
+				<p class="nav_header" id="active_nav"><a href="index.html">Merl Studio</a></p>
+				<p class="nav_header"><a href="projects.html">INDEX</a></p>			
+				<!-- <p class="nav_header"><a href="about.html">ABOUT</a></p> -->
+			</nav>
+			<div class="about_img_hero" id="indexHero">
+				<img src="" alt="">
+			</div>
+			<footer class="footer_wrapper">
+				<div class="footer">
+					<div class="col_footer">
+						<div>
+							<p class="footer_caption">project</p>
+							<h3 class="about_body">We're five friends who founded a design studio and we've got a lot to offer. We love working with passionate people on websites, brand idenities, editorial design, and maybe even some fine art and sculptures!</h3>
+						</div>
+					</div>
 
-	<section class="landing-page">
-		<img class="merl-hero" src="images/merl_logo.svg" alt="Merl">
-		<div class="welcome-text">
-			<p>
-			We’re Merl Longchamp. We are friends and we work together on projects that interest us. We are currently open to making websites, crafting your brand identity, designing your book or editorial, and even helping you with your installation art piece! Let us know what we can do for you. This website is currently in development, but in the meantime you can check us out on <a href="https://www.instagram.com/merl.studio/">Instagram.</a>
-			</p>
-		</div> 
-		<div class="numbers">
-			<p class="number active" id="number-1">1</p>
-			<p class="number" id="number-2">2</p>
-			<p class="number" id="number-3">3</p>
+					<div class="col_footer">
+						<div>
+							<p class="footer_caption">clients</p>
+							<h3 class="about_body">We've worked with a wide range of clients: from greater good work with The People's Lobby, to brand identies for startups and incubators like FinTech Sandbox and Sigma Surgical, to Universities such as Brown and RISD.</h3>
+						</div>
+					</div>
+
+					<div class="col_footer">
+						<div>
+							<p class="footer_caption">team</p>
+							<h3 class="about_body">Ethan W. Anderson - Technology <br>
+								Joseph A. Allegro - Strategy <br>
+							Meredith G. Barone - Art Direction <br>
+							Mostyn L. Griffith - Experience <br>
+							Greta M.H. Skagerlind - Creative</h3>
+						</div>
+					</div>
+
+					<div class="col_footer">
+						<div>
+							<p class="footer_caption">Contact</p>
+							<h3 class="about_body">
+								everyone@merl.studio
+								<br><br>
+								274 Van Buren St. #1 <br>
+								Brooklyn, NY 11221
+
+							</h3>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</section>
-
-	<section class="work">
-		
-	</section>
-
 </body>
 </html>
