2nd push, arrow and copy changes

--- a/projects/finnest.html
+++ b/projects/finnest.html
@@ -49,6 +49,11 @@
 								<h3 class="footer_title">Branding, Art Direction, Editorial Design</h3>
 							</div>
 						</div>
+						<div class="col_footer_up">
+							<div>
+								<h3 class="footer_title footer_up">↑</h3>
+							</div>
+						</div>
 					</div>
 				</footer>
 			</section>
