--- a/projects/flags.html
+++ b/projects/flags.html
@@ -48,6 +48,12 @@
 								<h3 class="footer_title">Web Design, User Interface, Interaction</h3>
 							</div>
 						</div>
+
+						<div class="col_footer_up">
+							<div>
+								<h3 class="footer_title footer_up">↑</h3>
+							</div>
+						</div>
 					</div>
 				</footer>
 			</section>
