--- a/projects/justice.html
+++ b/projects/justice.html
@@ -50,6 +50,12 @@
 								<h3 class="footer_title">Branding, Art Direction, Editorial Design</h3>
 							</div>
 						</div>
+
+						<div class="col_footer_up">
+							<div>
+								<h3 class="footer_title footer_up">↑</h3>
+							</div>
+						</div>
 					</div>
 				</footer>
 			</section>
@@ -78,7 +84,7 @@
 			<div class="col_small"></div>
 			<div class="col_medium">
 				<h1 class="hero_text">
-					JIG approached us to help them create a case statement: a printed piece to give context to their mission and articulate their goals. Our design approach was bold yet serious, highlighting the urgency needed to tackle structural inequality.
+					Justice Is Global approached us to help them create a case statement: a printed piece to give context to their mission and articulate their goals. Our design approach was bold yet serious, highlighting the urgency needed to tackle structural inequality.
 				</h1>
 			</div>
 		</div>
@@ -98,7 +104,7 @@
 			<div class="col_small"></div>
 			<div class="col_medium">
 				<h1 class="hero_text">
-					The organization aiming to end the “race to the bottom” in wages and working conditions on an international scale. JIG’s agenda is radical, targeting the root causes of issues like financial inequality, global warming, and unacceptable working conditions. 
+					The organization aiming to end the “race to the bottom” in wages and working conditions on an international scale. Justice Is Global's agenda is radical, targeting the root causes of issues like financial inequality, global warming, and unacceptable working conditions. 
 				</h1>
 			</div>
 		</div>
