--- a/projects/ladder.html
+++ b/projects/ladder.html
@@ -49,6 +49,12 @@
 								<h3 class="footer_title">Branding, User Interface, Interaction</h3>
 							</div>
 						</div>
+
+						<div class="col_footer_up">
+							<div>
+								<h3 class="footer_title footer_up">↑</h3>
+							</div>
+						</div>
 					</div>
 				</footer>
 			</section>
@@ -98,7 +104,7 @@
 			<div class="col_small"></div>
 			<div class="col_medium">
 				<h1 class="hero_text">
-					Our process heavily involved unpacking and iterating on different variations of ladders and attitudes and whatnot.
+					Our process involved playing a lot with the form of a ladder, and how it could evoke a sense of optimism and signify  upwards mobility.
 				</h1>
 			</div>
 		</div>
