--- a/projects/sigma.html
+++ b/projects/sigma.html
@@ -49,6 +49,12 @@
 							<h3 class="footer_title">Branding, Type Design, Editorial Design</h3>
 						</div>
 					</div>
+
+					<div class="col_footer_up">
+						<div>
+							<h3 class="footer_title footer_up">↑</h3>
+						</div>
+					</div>
 				</div>
 			</footer>
 
@@ -78,8 +84,6 @@
 			<div class="col_medium">
 				<h1 class="hero_text">
 					SIGMA is a proprietary application that crowdsources surgeon protocols to help  educate healthcare professionals, document steps in a surgical case, and increases OR efficiency.
-					<br><br>	
-					In order to develop an xxx identity, we lorem ipsum dolor sit amet. Nonummy nibh.
 				</h1>
 			</div>
 		</div>
@@ -89,6 +93,16 @@
 				<img src="../images/sigma/SIGMA_LOGO_PROCESS.svg" alt="" class="project_hero_img">
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col_small"></div>
+			<div class="col_medium">
+				<h1 class="hero_text">
+					In order to develop their identity, we began with the Greek letter Sigma as a reference for the shape of the logotype. The shape transformed through each iteration at one time taking on a more stylized curvilinear form, but finally arriving at a form more inspired by a <a href="https://en.wikipedia.org/wiki/Sigmoid_function">Sigmoid Curve.</a>				
+				</h1>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col_large">
 				<img src="../images/sigma/Sigma_Surg_Collateral_01.png" alt="" class="project_hero_img">
