--- a/projects/himc.html
+++ b/projects/himc.html
@@ -50,6 +50,12 @@
 								<h3 class="footer_title">Art Direction, Type Design, Branding</h3>
 							</div>
 						</div>
+
+						<div class="col_footer_up">
+							<div>
+								<h3 class="footer_title footer_up">↑</h3>
+							</div>
+						</div>
 					</div>
 				</footer>
 			</section>
