--- a/projects/raid.html
+++ b/projects/raid.html
@@ -49,6 +49,12 @@
 								<h3 class="footer_title">Branding, Print Design, Art Direction</h3>
 							</div>
 						</div>
+
+						<div class="col_footer_up">
+							<div>
+								<h3 class="footer_title footer_up">↑</h3>
+							</div>
+						</div>
 					</div>
 				</footer>
 			</section>
