Sigma copy change

--- a/projects/sigma.html
+++ b/projects/sigma.html
@@ -98,7 +98,7 @@
 			<div class="col_small"></div>
 			<div class="col_medium">
 				<h1 class="hero_text">
-					In order to develop their identity, we began with the Greek letter Sigma as a reference for the shape of the logotype. The shape transformed through each iteration at one time taking on a more stylized curvilinear form, but finally arriving at a form more inspired by a <a href="https://en.wikipedia.org/wiki/Sigmoid_function">Sigmoid Curve.</a>				
+					In order to develop their identity, we began with the Greek letter Sigma as a reference for the logotype. The shape transformed in each iteration of the mark, taking on a more stylized curvilinear form in the middle of the process.<br><br>We eventually arrived at a form more inspired by a <a href="https://en.wikipedia.org/wiki/Sigmoid_function">Sigmoid Curve,</a> signifying data as the driving force behind Sigma Surgical's tools.			
 				</h1>
 			</div>
 		</div>
