links to the about page

--- a/projects/raid.html
+++ b/projects/raid.html
@@ -88,7 +88,6 @@
 			</div>
 		</div>
 
-
 		<div class="row">
 			<div class="col_half">
 				<img src="../images/raid/RAID_Tote.jpg" alt="" class="project_hero_img">
@@ -97,16 +96,6 @@
 		<div class="row">
 			<div class="col_half">
 				<img src="../images/raid/RAID_Poster.jpg" alt="" class="project_hero_img">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col_half">
-				<img src="../images/raid/RAID_Mixer.png" alt="" class="project_hero_img">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col_half">
-				<img src="../images/raid/RAID_Tote_02.jpg" alt="" class="project_hero_img">
 			</div>
 		</div>
 
@@ -119,7 +108,17 @@
 			</div>
 		</div>
 
+		<div class="row">
+			<div class="col_half">
+				<img src="../images/raid/RAID_Mixer.png" alt="" class="project_hero_img">
+			</div>
+		</div>
 
+<!-- 		<div class="row">
+			<div class="col_half">
+				<img src="../images/raid/RAID_Tote_02.jpg" alt="" class="project_hero_img">
+			</div>
+		</div> -->
 
 	</section>
 </body>
