--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<div class="footer">
 					<div class="col_footer">
 						<div>
-							<p class="footer_caption">project</p>
-							<h3 class="about_body">We're five friends who founded a design studio and we've got a lot to offer. We love working with passionate people on websites, brand idenities, editorial design, and maybe even some fine art and sculptures!</h3>
+							<p class="footer_caption">Mission</p>
+							<h3 class="about_body">We're five friends who founded a design studio and we've got a lot to offer. We love to work with passionate people on websites, brand idenities, editorial design, and sometimes even fine art and sculptures!</h3>
 						</div>
 					</div>
 
@@ -40,11 +40,13 @@
 					<div class="col_footer">
 						<div>
 							<p class="footer_caption">team</p>
-							<h3 class="about_body">Ethan W. Anderson - Technology <br>
-								Joseph A. Allegro - Strategy <br>
-							Meredith G. Barone - Art Direction <br>
-							Mostyn L. Griffith - Experience <br>
-							Greta M.H. Skagerlind - Creative</h3>
+							<h3 class="about_body">
+							<a href="http://www.ethansworkis.online" target="_blank">
+							Ethan W. Anderson</a> - Technology <br>
+							<a href="http://josephallegro.com/" target="_blank">Joseph A. Allegro</a> - Strategy <br>
+							<a href="https://www.mbweb.site/" target="_blank">Meredith G. Barone</a> - Art Direction <br>
+							<a href="https://www.mostyngriffith.com/" target="_blank">Mostyn L. Griffith</a> - Experience <br>
+							<a href="http://gskagerlind.com/" target="_blank">Greta M.H. Skagerlind</a> - Creative</h3>
 						</div>
 					</div>
 
@@ -52,7 +54,7 @@
 						<div>
 							<p class="footer_caption">Contact</p>
 							<h3 class="about_body">
-								everyone@merl.studio
+								<a href="mailto:everyone@merl.studio" target="_top">everyone@merl.studio</a>
 								<br><br>
 								274 Van Buren St. #1 <br>
 								Brooklyn, NY 11221
