image 2 up on raid.html

--- a/projects/raid.html
+++ b/projects/raid.html
@@ -92,8 +92,6 @@
 			<div class="col_half">
 				<img src="../images/raid/RAID_Tote.jpg" alt="" class="project_hero_img">
 			</div>
-		</div>
-		<div class="row">
 			<div class="col_half">
 				<img src="../images/raid/RAID_Poster.jpg" alt="" class="project_hero_img">
 			</div>
@@ -108,11 +106,13 @@
 			</div>
 		</div>
 
-		<div class="row">
+<!-- 		<div class="row">
 			<div class="col_half">
 				<img src="../images/raid/RAID_Mixer.png" alt="" class="project_hero_img">
 			</div>
-		</div>
+			<div class="col_half">
+			</div>
+		</div> -->
 
 <!-- 		<div class="row">
 			<div class="col_half">
