--- a/index.html
+++ b/index.html
@@ -13,53 +13,46 @@
 	<!-- collapses on scroll or click -->
 	<section class="project_landing_container">
 		<div class="project_landing">
-			<nav>
-				<p class="nav_header" id="active_nav"><a href="index.html">Merl Studio</a></p>
-				<p class="nav_header"><a href="projects.html">INDEX</a></p>			
-				<!-- <p class="nav_header"><a href="about.html">ABOUT</a></p> -->
-			</nav>
-			<div class="about_img_hero" id="indexHero">
-				<img src="" alt="">
-			</div>
+
+			<img id="homeLogo" src="images/merl_logo.svg">
+
 			<footer class="footer_wrapper">
 				<div class="footer">
 					<div class="col_footer">
-						<div>
-							<p class="footer_caption">Mission</p>
-							<h3 class="about_body">We're five friends who founded a design studio and we've got a lot to offer. We love to work with passionate people on websites, brand identities, editorial design, and sometimes even fine art and sculptures!</h3>
-						</div>
+					</div>
+					<div class="col_footer">
+					</div>
+					<div class="col_footer">
 					</div>
 
-					<div class="col_footer">
-						<div>
-							<p class="footer_caption">clients</p>
-							<h3 class="about_body">We've worked with a wide range of clients: from greater good work with The People's Lobby, to brand identies for startups and incubators like FinTech Sandbox and Sigma Surgical, to Universities such as Brown and RISD.</h3>
-						</div>
-					</div>
+					<div class="col_footer_large">	
+						<div class="col_double">
+							<p class="about_title">MISSION</p>
 
-					<div class="col_footer">
-						<div>
-							<p class="footer_caption">team</p>
-							<h3 class="about_body">
+							<p class="about_body">We're five friends who founded a design studio and we've got a lot to offer. We love to work with passionate people on websites, brand identities, editorial design, and sometimes even fine art and sculptures!</p>
+						</div>
+						<div class="col_double">
+							<p class="about_title">CLIENTS</p>
+
+							<p class="about_body">We've worked with a wide range of clients: from greater good work with The People's Lobby, to brand identies for startups and incubators like FinTech Sandbox and Sigma Surgical, to Universities such as Brown and RISD.</p>
+						</div>
+						<div class="col_double">
+							<p class="about_title">TEAM</p>
+
+							<p class="about_body">
 							<a href="http://www.ethansworkis.online" target="_blank">
 							Ethan W. Anderson</a> - Technology<br>
 							<a href="http://josephallegro.com/" target="_blank">Joseph A. Allegro</a> - Strategy<br>
 							<a href="https://www.mbweb.site/" target="_blank">Meredith G. Barone</a> - Art<br>
 							<a href="https://www.mostyngriffith.com/" target="_blank">Mostyn L. Griffith</a> - Experience<br>
-							<a href="http://gskagerlind.com/" target="_blank">Greta M.H. Skagerlind</a> - Creative</h3>
+							<a href="http://gskagerlind.com/" target="_blank">Greta M.H. Skagerlind</a> - Creative</p>
 						</div>
-					</div>
+						<div class="col_double">
+							<p class="about_title">CONTACT</p>
 
-					<div class="col_footer">
-						<div>
-							<p class="footer_caption">Contact</p>
-							<h3 class="about_body">
-								<a href="mailto:everyone@merl.studio" target="_top">everyone@merl.studio</a>
-								<br><br>
-								274 Van Buren St. №1 <br>
-								Brooklyn, NY 11221 ☁
-
-							</h3>
+							<p class="about_body">
+								Send us an email if you would like to see some work examples or get started on a project!<br><br><a href="mailto:everyone@merl.studio" target="_top">everyone@merl.studio</a>
+							</p>
 						</div>
 					</div>
 				</div>
