--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<meta name="description" content="Demo project with jQuery">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="icon"
+	  type="image/png"
+	  href="images/merl_favi.png">
+
 </head>
 <body>
 	<!-- project landing page block block -->
