Changed to my normal email from merl.studio email
Canceled G Suite

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<p class="about_title">CONTACT</p>
 
 							<p class="about_body">
-								Send us an email if you would like to see some work examples or get started on a project!<br><br><a href="mailto:mostyn@merl.studio" target="_top">mostyn@merl.studio</a>
+								Send us an email if you would like to see some work examples or get started on a project!<br><br><a href="mailto:mostyn@merl.studio" target="_top">mostyn.griffith@gmail.com</a>
 							</p>
 						</div>
 					</div>
