--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
 						</div>
 						<div class="col_double">
 							<p class="about_title">CONTACT</p>
+							
+							<p class="about_body">
+								Check us out on <a href="https://www.instagram.com/merl.studio/">Instagram!</a>
+							</p>
 
 							<p class="about_body">
 								Send us an email if you would like to see some work examples or get started on a project!<br><br><a href="mailto:mostyn@merl.studio" target="_top">mostyn.griffith@gmail.com</a>
