--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
 							<p class="about_title">CONTACT</p>
 							
 							<p class="about_body">
-							</p>
-
-							<p class="about_body">
-								Check us out on <a href="https://www.instagram.com/merl.studio/">Instagram!</a><br><br>
+								Check us out on Instagram at <a href="https://www.instagram.com/merl.studio/">merl.studio</a><br><br>
 
 								Send us an email if you would like to see some work examples or get started on a project!<br><br><a href="mailto:mostyn@merl.studio" target="_top">mostyn.griffith@gmail.com</a>
 							</p>
