--- a/index.html
+++ b/index.html
@@ -13,57 +13,103 @@
 
 </head>
 <body>
-	<!-- project landing page block block -->
-	<!-- collapses on scroll or click -->
 	<section class="project_landing_container">
-		<div class="project_landing">
-
-			<img id="homeLogo" src="images/merl_logo.svg">
-
-			<footer class="footer_wrapper">
-				<div class="footer">
-					<div class="col_footer">
-					</div>
-					<div class="col_footer">
-					</div>
-					<div class="col_footer">
-					</div>
-
-					<div class="col_footer_large">	
-						<div class="col_double">
-							<p class="about_title">MISSION</p>
-
-							<p class="about_body">We're five friends who founded a design studio and we've got a lot to offer. We love to work with passionate people on websites, brand identities, editorial design, and sometimes even fine art and sculptures!</p>
-						</div>
-						<div class="col_double">
-							<p class="about_title">CLIENTS</p>
-
-							<p class="about_body">We've worked with a wide range of clients: from greater good work with The People's Lobby, to brand identies for startups and incubators like FinTech Sandbox and Sigma Surgical, to Universities such as Brown and RISD.</p>
-						</div>
-						<div class="col_double">
-							<p class="about_title">TEAM</p>
-
-							<p class="about_body">
-							<a href="http://www.ethansworkis.online" target="_blank">
-							Ethan W. Anderson</a> - Technology<br>
-							<a href="http://josephallegro.com/" target="_blank">Joseph A. Allegro</a> - Strategy<br>
-							<a href="https://www.mbweb.site/" target="_blank">Meredith G. Barone</a> - Art<br>
-							<a href="https://www.mostyngriffith.com/" target="_blank">Mostyn L. Griffith</a> - Experience<br>
-							<a href="http://gskagerlind.com/" target="_blank">Greta M.H. Skagerlind</a> - Creative</p>
-						</div>
-						<div class="col_double">
-							<p class="about_title">CONTACT</p>
-							
-							<p class="about_body">
-								Check us out on Instagram at <a href="https://www.instagram.com/merl.studio/">merl.studio</a><br><br>
-
-								Send us an email if you would like to see some work examples or get started on a project!<br><br><a href="mailto:mostyn@merl.studio" target="_top">mostyn.griffith@gmail.com</a>
-							</p>
-						</div>
-					</div>
+		<div class="project_landing-2">
+				<div class="nav-item header">
+					<!-- <img class="homeLogo" src="images/merl-studio.svg"> -->
+					<a href="index.html">
+						<h1>Merl Studio</h1>
+					</a>
 				</div>
-			</footer>
+				<div class="nav-item header contacth1">
+					<!-- <img class="homeLogo contact" src="images/contact.svg"> -->
+					<a href="contact.html">
+						<h1>Contact</h1>
+					</a>
+				</div>
+
+
 		</div>
+		
+		
+	</section>
+	<section class="gallery">
+		
+		<div id="slide1"></div>
+		<div id="slide2"></div>
+		<div id="slide3"></div>
+		<div id="slide4"></div>
+		<div id="slide5"></div>
+		<div id="slide6"></div>
+
+		<div class="carousel-container">
+		  <div class="slide" id="s1">
+		  	<img src="images/content/merl-tc.png" alt="Slide 1">
+		    <a href="#slide1" class="nav prev">
+		    	<!-- <span class="arrow-desktop">&#10094;</span>-->
+		    	<!-- <span class="arrow-mobile">&#8593;</span> -->
+		    </a>
+		    <a href="#slide2" class="nav next">
+		    	<span class="arrow-desktop">&#10095;</span> <!-- Right arrow -->
+		    	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
+		    </a>
+		    
+
+		  </div>
+		  <div class="slide" id="s2">
+		  	<img src="images/content/merl-card.png" alt="Slide 1">
+
+		    <a href="#slide1" class="nav prev">
+		    	<span class="arrow-desktop">&#10094;</span>
+		    	<span class="arrow-mobile">&#8593;</span>
+			</a>
+		    <a href="#slide3" class="nav next">
+		    	<span class="arrow-desktop">&#10095;</span> <!-- Right arrow -->
+		    	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
+		    </a>
+		  </div>
+		  <div class="slide" id="s3">
+		  	<img src="images/content/merl-kembara.png" alt="Slide 1">
+
+		    <a href="#slide2" class="nav prev">
+		    	<span class="arrow-desktop">&#10094;</span>
+		    	<span class="arrow-mobile">&#8593;</span>
+		    </a>
+		    <a href="#slide4" class="nav next">
+		    	<span class="arrow-desktop">&#10095;</span> <!-- Right arrow -->
+		    	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
+		    </a>
+		  </div>
+		  <div class="slide" id="s4">
+		  	<img src="images/content/merl-muse.png" alt="Slide 1">
+
+		    <a href="#slide3" class="nav prev">
+		    	<span class="arrow-desktop">&#10094;</span>
+		    	<span class="arrow-mobile">&#8593;</span>
+		    </a>
+		    <a href="#slide5" class="nav next">
+		    	<span class="arrow-desktop">&#10095;</span> <!-- Right arrow -->
+		    	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
+		    </a>
+		  </div>
+		  <div class="slide" id="s5">
+		  	<img src="images/content/merl-jig.png" alt="Slide 1">
+
+		    <a href="#slide4" class="nav prev">
+		    	<span class="arrow-desktop">&#10094;</span>
+		    	<span class="arrow-mobile">&#8593;</span>
+		    </a>
+		    <a href="#slide6" class="nav next">
+		    	<span class="arrow-desktop">&#10095;</span> <!-- Right arrow -->
+		    	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
+		    </a>
+		  </div>
+		  <!-- <div class="slide" id="s6">
+		    <a href="#slide5" class="nav prev">&#10094;</a>
+		    <a href="#slide1" class="nav next">&#10095;</a>
+		  </div> -->
+		</div>
+
 	</section>
 </body>
 </html>
