--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<div class="carousel-container">
 		  <div class="slide" id="s1">
-		  	<img src="images/content/merl-tc.png" alt="Slide 1">
+		  	<img src="images/content/merl-tc.jpg" alt="Slide 1">
 		    <a href="#slide1" class="nav prev">
 		    	<!-- <span class="arrow-desktop">&#10094;</span>-->
 		    	<!-- <span class="arrow-mobile">&#8593;</span> -->
@@ -57,7 +57,7 @@
 
 		  </div>
 		  <div class="slide" id="s2">
-		  	<img src="images/content/merl-card.png" alt="Slide 1">
+		  	<img src="images/content/merl-card.jpg" alt="Slide 1">
 
 		    <a href="#slide1" class="nav prev">
 		    	<span class="arrow-desktop">&#10094;</span>
@@ -69,7 +69,7 @@
 		    </a>
 		  </div>
 		  <div class="slide" id="s3">
-		  	<img src="images/content/merl-kembara.png" alt="Slide 1">
+		  	<img src="images/content/merl-kembara.jpg" alt="Slide 1">
 
 		    <a href="#slide2" class="nav prev">
 		    	<span class="arrow-desktop">&#10094;</span>
@@ -81,7 +81,7 @@
 		    </a>
 		  </div>
 		  <div class="slide" id="s4">
-		  	<img src="images/content/merl-muse.png" alt="Slide 1">
+		  	<img src="images/content/merl-muse.jpg" alt="Slide 1">
 
 		    <a href="#slide3" class="nav prev">
 		    	<span class="arrow-desktop">&#10094;</span>
@@ -93,7 +93,7 @@
 		    </a>
 		  </div>
 		  <div class="slide" id="s5">
-		  	<img src="images/content/merl-jig.png" alt="Slide 1">
+		  	<img src="images/content/merl-jig.jpg" alt="Slide 1">
 
 		    <a href="#slide4" class="nav prev">
 		    	<span class="arrow-desktop">&#10094;</span>
@@ -104,10 +104,17 @@
 		    	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
 		    </a>
 		  </div>
-		  <!-- <div class="slide" id="s6">
-		    <a href="#slide5" class="nav prev">&#10094;</a>
-		    <a href="#slide1" class="nav next">&#10095;</a>
-		  </div> -->
+		  <div class="slide" id="s6">
+		  		<img src="images/content/merl-carde.jpg" alt="Slide 1">
+
+		  	  <a href="#slide4" class="nav prev">
+		  	  	<span class="arrow-desktop">&#10094;</span>
+		  	  	<span class="arrow-mobile">&#8593;</span>
+		  	  </a>
+		  	  <a href="#slide6" class="nav next">
+		  	  	<span class="arrow-desktop">&#10095;</span> <!-- Right arrow -->
+		  	  	<span class="arrow-mobile">&#8595;</span>   <!-- Down arrow -->
+		  	  </a>		  </div>
 		</div>
 
 	</section>
