--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,15 @@
 				</div> -->
 		</div>
 		<div class="contact-p">
+			
+			<p>
+				Merl is a branding and UX/UI design collective that started with five friends in the Graphic Design program at the Rhode Island School Design in 2017.
+			</p>
+			<br>
 			<p>mostyn.griffith@gmail.com</p>
+			<br>
 			<p>Instagram: <a target="blank" href="https://www.instagram.com/merl.studio/">@merl.studio</a></p>
+
 		</div>
 		
 	</section>
